force-app/main/default/objects/ABHI_Field_Mapping__mdt/ABHI_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ABHI Field Mapping</label>
    <pluralLabel>ABHI Field Mappings</pluralLabel>
</CustomObject>