force-app/main/default/objects/ABHI_Field_Mapping__mdt/fields/ABHI_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ABHI_Field_API_Name__c</fullName>
    <description>This is the API name that is present on object</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>