force-app/main/default/objects/ABHI_Field_Mapping__mdt/fields/ABHI_JSON_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>ABHI_JSON_Field_Name__c</fullName>
    <description>JSON name coming in request</description>
    <label>JSON Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>