force-app/main/default/objects/ABHI_Field_Mapping__mdt/fields/ABHI_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ABHI_Object_Mapping__c</fullName>
    <label>ABHI Object Mapping</label>
    <referenceTo>ABHI_Object_Mapping__mdt</referenceTo>
    <relationshipName>ABHI_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>