force-app/main/default/objects/ABHI_Field_Mapping__mdt/fields/ABHI_Type__c.field-meta.xml
<CustomField>
    <fullName>ABHI_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Non-Individual</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Health_Provider__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>